2007-08-06  Albert Chu <chu11@llnl.gov>

	* ac_ipmi_monitoring_sdr_cache_dir.m4,
	ac_ipmi_monitoring_sensor_config_file.m4,
	ac_ipmidetect_config_file.m4, ac_ipmidetectd_config_file.m4,
	ac_ipmipower_config_file.m4: Replace hard-coded /etc and /var with
	${sysconfdir} and ${localstatedir} respecively.  Remove option to
	specify config files.  Location of config files is now controlled
	through setting of --localstatedir and --sysconfidr.

	* ipmimonitoring/Makefile.am: Install w/ correct ./configure
	location.

	* freeipmi.spec.in: Use %{_localstatedir} instead of /var.

	* bmc-watchdog/Makefile.am: Fix distcheck.

2007-08-06  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/ipmimonitoring.c (cmdline_parse): Fix
	parsingcorner case.
	
2007-08-06  Albert Chu <chu11@llnl.gov>

	* ipmidetect/ipmidetect.conf.5.in, ipmidetect/ipmidetectd.8.in,
	ipmidetect/ipmidetectd.conf.5.in, ac_ipmidetect_config_file.m4,
	ipmidetect/src/ipmidetect/ipmidetect.c: Fix inconsistency w/
	"CONF_FILE" vs. "CONFIG_FILE_DEFAULT" leading to invalid manpages.
	
2007-08-02  Albert Chu <chu11@llnl.gov>

	* tagged post-udm-2-0-merge

2007-08-02  Albert Chu <chu11@llnl.gov>

        Merge from udm_ipmi_2_0_branch.
	
	Re-org UDM and add IPMI 2.0 device support to UDM.

	* common/src/udm-err-wrappers.h
	(__UDM_BAD_COMPLETION_CODE_TO_UDM_ERRNUM): Rename to
	UDM_BAD_COMPLETION_CODE_TO_UDM_ERRNUM.

	* common/src/udm-fiid-wrappers.h (UDM_FIID_OBJ_SET,
	UDM_FIID_OBJ_SET_CLEANUP, UDM_FIID_OBJ_GET_DATA_LEN,
	UDM_FIID_OBJ_GET_DATA_LEN_CLEANUP): New macros.

	* libfreeipmi/include/freeipmi/udm/freeipmi/udm/ipmi-kcs-api-udm.h,
	freeipmi/udm/ipmi-lan-interface-udm.h,
	freeipmi/udm/ipmi-openipmi-api-udm.h,
	freeipmi/udm/ipmi-ssif-api-udm.h: Moved files to
	libfreeipmi/src/udm.  No longer distribute as part of libfreeipmi.

	* libfreeipmi/include/Makefile.am,
	libfreeipmi/src/udm/Makefile.am, libfreeipmi/include/udm/udm.h:
	Update with .h file move changes.
